--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,29 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+.rank {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 18px;
+    text-align: right;
+    vertical-align: baseline;
+    padding-right: 6px;
+    padding-top: 6px;
+}
+
 td.points {
+    text-align: right;
     padding-left: 2vw;
 }
 
 td.score {
+    text-align: right;
     font-size: 26px;
     padding-left: 1.4vw;
+}
+
+td.score.turns {
+    text-align: left;    
+    padding-left: 0;
 }
 
 .points {
